--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class = "header">
-		<h1>Welcome to my Website</h1>	
+		<h1>Crystal's Website</h1>	
 	</div>
 	<div class = "nav-bar">
 		<div class ="tab">
