--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel = "shortcut icon" type = "image/x-icon" hrf = "images/sbbeach.png">
-	<title>Welcome</title>
+	<link rel = "shortcut icon" type = "image/x-icon" hrf = "images/sbbeach.jpeg">
+	<title>Crystal's Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
 
 	<div class = "main-body">
 		<div>
-			<img src="images/works.jpg">
+			<img src="images/bucketbeach.jpeg">
 		</div>
 		<div>
 			<p>
