--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome</title>
+	<link rel = "shortcut icon" type = "image/x-icon" href = "images/sbbeach.jpeg">
+	<title>Crystal Eskander</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class = "header">
-		<h1>Welcome to my Website</h1>	
+		<h1>Crystal Eskander</h1>	
 	</div>
 	<div class = "nav-bar">
 		<div class ="tab">
@@ -19,7 +20,7 @@
 
 	<div class = "main-body">
 		<div>
-			<img src="images/works.jpg">
+			<img src="images/bucketbeach.jpeg" style = "width:500px; height:400px;">
 		</div>
 		<div>
 			<p>
