--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		</div>
 		<div>
 			<p>
-				Paragraph of things that I want to put under my image
+				Hi my name is Crystal Eskander! I'm a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara. 
+
+				I have professional experience in Software Engineering through my internships at Northrop Grumman and Amazon. I have served as a Logistics Coordinator for SB Hacks for 3 years, a 500-person event that brings students from all over California to the heart of UCSB for an innovation-filled weekend. 			
 			</p>
 		</div>
 	</div>
