--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	</div>
 	<div class = "nav-bar">
 		<div class ="tab">
-			<a href="https://google.com">Google</a>
+			<a href="https://www.linkedin.com/in/crystal-eskander/">LinkedIn</a>
 		</div>
 		<div class = "tab extra">
-			<a href="https://github.com">Github</a>
+			<a href="https://github.com/Ceskander">Github</a>
 		</div>
 	</div>
 
