--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 		<div>
 			<p>
-				Hi my name is Crystal Eskander! I'm a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara.
+				Hi my name is Crystal Eskander! I am a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara.
 			</p>
 
 			<p> 
