--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	</div>
 	<div class = "nav-bar">
 		<div class ="tab">
-			<a href="https://google.com">Google</a>
+			<a href="https://www.linkedin.com/in/crystal-eskander/">LinkedIn</a>
 		</div>
 		<div class = "tab extra">
-			<a href="https://github.com">Github</a>
+			<a href="https://github.com/Ceskander">Github</a>
 		</div>
 	</div>
 
@@ -24,7 +24,11 @@
 		</div>
 		<div>
 			<p>
-				Paragraph of things that I want to put under my image
+				Hi my name is Crystal Eskander! I am a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara.
+			</p>
+
+			<p> 
+				I have professional experience in Software Engineering through my internships at Northrop Grumman and Amazon. I have served as a Logistics Coordinator for SB Hacks for 3 years, a 500-person event that brings students from all over California to the heart of UCSB for an innovation-filled weekend. 			
 			</p>
 		</div>
 	</div>
