--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div>
 			<img src="images/bucketbeach.jpeg" style = "width:500px; height:400px;">
 		</div>
-		<div>
+		<div class ="paragraph">
 			<p>
 				Hi my name is Crystal Eskander! I am a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara.
 			</p>
