--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 	<!-- Tab links -->
 	<div class="tab">
-	  <button class="tablinks" onclick="openCity(event, 'Home')" id = "defaultOpen">Home</button>
-	  <button class="tablinks" onclick="openCity(event, 'Images')">Images</button>
-	  <button class="tablinks" onclick="openCity(event, 'Videos')">Videos</button>
-	  <button class="tablinks" onclick="openCity(event, 'Projects')">Projects</button>
+	  <button class="tablinks" onclick="openTab(event, 'Home')" id="default_Open">Home</button>
+	  <button class="tablinks" onclick="openTab(event, 'Images')">Images</button>
+	  <button class="tablinks" onclick="openTab(event, 'Videos')">Videos</button>
+	  <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
 	</div>
 
 		<!-- Tab content -->
@@ -37,7 +37,7 @@
 				I have professional experience in Software Engineering through my internships at Northrop Grumman and Amazon. I have served as a Logistics Coordinator for SB Hacks for 3 years, a 500-person event that brings students from all over California to the heart of UCSB for an innovation-filled weekend. 			
 			</p>
 		</div>
-	</div>
+		</div>
 	</div>
 
 	<div id="Images" class="tabcontent">
