--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 		<h1>Home</h1>	
 	  	<div class = "main-body">
 		<div>
-			<img src="images/bucketbeach.jpeg" style = "width:500px; height:400px;">
+			<img src="images/gradpic.JPG" style = "width:500px; height:500px;">
 		</div>
 		<div class ="paragraph">
 			<p>
-				Hi my name is Crystal Eskander! I am a fourth-year undergraduate student pursuing a Bachelor of Science degree in Computer Engineering from UC Santa Barbara.
+				Hi my name is Crystal Eskander! I recently graduated from UC Santa Barbara with a Bachelor of Science degree in Computer Engineering. I am actively looking for opportunities to help me grow.
 			</p>
 
 			<p> 
-				I have professional experience in Software Engineering through my internships at Northrop Grumman and Amazon. I have served as a Logistics Coordinator for SB Hacks for 3 years, a 500-person event that brings students from all over California to the heart of UCSB for an innovation-filled weekend. 			
+				I have professional experience in Software Engineering through my internships at Northrop Grumman and Amazon. I have served as a Logistics Coordinator for SB Hacks for 3 years, a 500-person event that brings students from all over California to the heart of UCSB for an innovation-filled weekend. I will be working at Amazon Web Services as an Associate Professional Services Consultant this Fall. 			
 			</p>
 		</div>
 		</div>
