--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1>Home</h1>	
 	  	<div class = "main-body">
 		<div>
-			<img src="images/gradpic.JPG" style = "width:500px; height:500px;">
+			<img src="images/gradpic.jpg" style = "width:500px; height:500px;">
 		</div>
 		<div class ="paragraph">
 			<p>
